--- a/_posts/2018-06-05-丛林行走.md
+++ b/_posts/2018-06-05-丛林行走.md
@@ -3,8 +3,9 @@ published: true
 layout: post
 date: ’2018-06-05’
 categories: journal
+photo: resources\figure_2018-06-05T102744.jpg
 ---
-# 生如夏花>丛林行走
+生如夏花>丛林行走
 
 
 >气温：10-24度  
